# CMake-Skeleton

./: CMakeLists.txt  LICENSE.md  README.md
modules/: CMakeLists.txt  MyprojConfig.cmake.in
modules/myapp/: CMakeLists.txt
modules/myapp/src/: myapp.c
modules/myapp/tests/: CMakeLists.txt  test1.c
modules/mylib/: CMakeLists.txt
modules/mylib/include/: mylib_internal.h
modules/mylib/include/public/: mylib.h
modules/mylib/src/: mylib.c  mylib_config.h.in
modules/mylib/tests/: CMakeLists.txt
modules/utils/: CMakeLists.txt
modules/utils/include/: utils.h
modules/utils/src/: utils.c
modules/utils/tests/: CMakeLists.txt
